<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="folder_view_app_name">Folder view</string>
    <string name="action_settings">Settings</string>
    <string name="no_mms_plugin">Has no mms folder view plugin</string>
    <string name="menu_msg_list">Message view</string>
    <string name="menu_search">Search</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="menu_cell_broadcasts">Cell broadcasts</string>
    <string name="menu_sim_message">Messages in SIM</string>
    <string name="folder_display_option">Display option</string>
    <string name="folder_sortby">Sort By</string>
    <string name="folder_delete_messages">Delete messages</string>
    <string name="folder_sms_merge_forward">SMS Merge Forward</string>
    <string name="search_setting_description">Text in your messages</string>
    <string name="search_max_length">Search sentence is too long, will limited to 512.</string>
    <string name="search">Message Search</string>
    <string name="search_result">Search Result</string>
    <string name="muti_select_all">Select All</string>
    <string name="muti_select_none">Select None</string>
    <string name="msg_status_send_failed">"Message not sent "</string>
    <string name="sort_msg_list_empty_text">You\'ll see the messages listed here</string>
    <string name="folder_reply">"Reply"</string>
    <string name="draft_message">"Draft "</string>
    <string name="message_status_delivered_failed">"Delivered failed"</string>
    <string name="user_not_exist">The user does not exist.</string>

    <string-array name="sort_type">
        <item>By time desc</item>
        <item>By time asc</item>
        <item>By address desc</item>
        <item>By address asc</item>
    </string-array>

    <string name="folder_display_all">Display all Messages</string>
    <string name="delete_messages_confirmation_dialog_title">Delete the selected messages?</string>
    <string name="delete_message_fail">"Delete the selected messages fail!"</string>
    <string name="have_select_message">"Selected %1$d"</string>
    <string name="sort_msg_list_menu_addtocontacts">Add to Contacts</string>
    <string name="sort_msg_list_menu_call">Call</string>
    <string name="sort_msg_list_menu_editbeforecall">Edit before call</string>
    <string name="sort_msg_list_menu_videocall">Video call</string>

    <string-array name="msg_list_context_menu">
        <item>Add to Contacts</item>
        <item>Call</item>
        <item>Edit before call</item>
        <item>Video call</item>
    </string-array>

    <string name="copy_message_text">Copy text</string>
    <string name="has_add_to_contacts">Has been added to contacts</string>
    <string name="context_menu_copy_to_sim_memory">Copy message to SIM</string>
    <string name="no">Cancel</string>
    <string name="yes">OK</string>

    <!-- bug 489223: add for Custom XML SQL Query begin -->
    <string name="position1">Today messages</string>
    <string name="position2">Before today</string>
    <string name="position3">Between 3 and 5 days ago</string>
    <!-- bug 489223: add for Custom XML SQL Query end -->

    <string name="copy_sim_sms_to_phone">Copy message to phone</string>
    <string name="copy_sms_to_sim">Copy message to</string>
    <string name="del_sim_sms">Delete</string>
    <string name="menu_folder_view">Folder view</string>
    <string name="simsms_title">SimSms</string>
</resources>
