<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/action_compose_new"
        android:icon="@drawable/ic_menu_msg_compose_holo_dark"
        android:orderInCategory="300"
        android:title="@string/new_message"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search_holo_dark"
        android:orderInCategory="301"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/action_sortby"
        android:icon="@drawable/ic_menu_sortby_am_alpha"
        android:orderInCategory="302"
        app:showAsAction="always"
        android:title="@string/folder_sortby"/>
    <item
        android:id="@+id/action_menu_msg_list"
        android:icon="@drawable/ic_menu_list"
        android:orderInCategory="303"
        android:title="@string/menu_msg_list"/>
    <item
        android:id="@+id/action_cell_broadcasts"
        android:orderInCategory="304"
        android:title="@string/action_wireless_alerts"/>
    <item
        android:id="@+id/message_in_sim"
        android:orderInCategory="305"
        android:title="@string/menu_sim_message"/>
    <!--<item
        android:id="@+id/folder_view"
        android:orderInCategory="306"
        android:title="@string/menu_folder_view"/>-->
    <item
        android:id="@+id/action_display_option"
        android:orderInCategory="307"
        android:title="@string/folder_display_option"/>
    <item
        android:id="@+id/action_delete_messages"
        android:orderInCategory="308"
        android:title="@string/folder_delete_messages"/>
    <item
        android:id="@+id/action_sms_merge_forward"
        android:orderInCategory="309"
        android:title="@string/folder_sms_merge_forward"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_setting"
        android:orderInCategory="310"
        android:title="@string/menu_preferences"/>
</menu>
